--- a/css/main.css
+++ b/css/main.css
@@ -25,22 +25,22 @@
 
 .cart i {
     display: block;
-    padding: 12px;
-    font-size: 55px;
+    padding: 1.2rem;
+    font-size: 5.5rem;
     color: #ffdf4f;
-    border-radius: 30px;
+    border-radius: 3rem;
 
 }
 
 .cart i:hover {
-    transform: translateY(-6px);
+    transform: translateY(-0.6rem);
 }
 
 .wrapper {
     width: 100%;
     max-width: 31.25rem;
     margin: 6rem auto;
-    margin-right: 700px;
+    margin-right: 70rem;
 
 }
 
@@ -49,7 +49,7 @@
     font-size: 1.1rem;
     font-weight: 400;
     text-transform: uppercase;
-    letter-spacing: +1.3px;
+    letter-spacing: +0.13rem;
     margin-bottom: 0.5rem;
 }
 
@@ -69,7 +69,7 @@
     color: #39b54a;
     opacity: 1;
     /* Firefox */
-    font-size: 13.5px;
+    font-size: 1.35rem;
 }
 
 :-ms-input-placeholder {
@@ -147,16 +147,16 @@ header {
 
 .navlist a {
     color: white;
-    margin-left: 60px;
-    font-size: 19px;
+    margin-left: 6rem;
+    font-size: 1.9rem;
     font-weight: 600;
-    border-bottom: 2px solid transparent;
+    border-bottom: 0.2rem solid transparent;
     transition: all .55s ease;
 
 }
 
 .navlist a:hover {
-    border-bottom: 2px solid #39b54a;
+    border-bottom: 0.2rem solid #39b54a;
     color: #ffdf4f;
 }
 
@@ -166,7 +166,7 @@ header {
     display: flex;
     top: 0%;
     right: 50%;
-    margin-top: 31px;
+    margin-top: 3.1rem;
 }
 
 
@@ -190,13 +190,13 @@ nav {}
 /* Dropdown Menu a (navbar) Bg Color */
 .nav-menu .dropdown a:after {
     background-color: white !important;
-    border-bottom: 2px solid #B7521B;
+    border-bottom: 0.2rem solid #B7521B;
 }
 
 /* Dropdown Menu Open a (navbar) Bg Color */
 .down-color {
     background-color: white !important;
-    border-bottom: 2px solid #ecc725;
+    border-bottom: 0.2rem solid #ecc725;
 }
 
 /* Dropdown Menu Inner Items Default Bg Color */
@@ -219,13 +219,12 @@ nav {}
 
 nav {
     position: absolute;
-    height: 82px;
+    height: 8.2rem;
     width: 100vw;
 }
 
 .nav-menu {
     display: flex;
-    margin-top: 0px;
     padding: 0;
 }
 
@@ -241,7 +240,7 @@ nav {
     text-align: center;
     z-index: 100;
     background-color: transparent;
-    line-height: 61px;
+    line-height: 6.1rem;
     overflow: hidden;
 }
 
@@ -255,7 +254,7 @@ nav {
     color: black;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 1.5rem;
 }
 
 
@@ -273,7 +272,7 @@ nav {
     content: "";
     position: absolute;
     display: inline-block;
-    height: 60px;
+    height: 6rem;
 }
 
 .nav-menu .norm a:after {
@@ -308,12 +307,12 @@ nav {
 .dropdown-menu {
     width: 100%;
     position: relative;
-    top: -500px;
+    top: -50rem;
     text-align: center;
     z-index: 1049;
     display: block;
     list-style: none;
-    font-size: 12px;
+    font-size: 1.2rem;
     border: none;
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
@@ -322,12 +321,12 @@ nav {
 
 .dropdown-menu>li>a {
     display: block;
-    padding-top: 5.6px;
-    padding-bottom: 5.6px;
+    padding-top: 0.56rem;
+    padding-bottom: 0.56rem;
     clear: both;
     font-family: gotham light !important;
-    font-size: 15px !important;
-    line-height: 35px;
+    font-size: 1.5rem !important;
+    line-height: 3.5rem;
     color: #777 !important;
     white-space: nowrap;
 }
@@ -354,19 +353,19 @@ nav {
 #drop {
     width: 100%;
     text-align: center;
-    margin-bottom: 18.5px;
+    margin-bottom: 1.85rem;
 }
 
 .down {
     position: absolute;
     display: block;
-    top: 0px;
+    top: 0rem;
 }
 
 
 #menu-icon {
     color: black;
-    font-size: 35px;
+    font-size: 3.5rem;
     z-index: 10001;
     cursor: pointer;
     display: none;
@@ -376,9 +375,8 @@ nav {
     height: 100%;
     width: 100%;
     min-height: 100vh;
-    position: relative;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    justify-content: center;
     align-items: center;
     gap: 2rem;
     background-position: center;
@@ -387,7 +385,7 @@ nav {
     /* Do not repeat the image */
     background-size: cover;
     /* Resize the background image to cover the entire container */
-    margin-left: 40px;
+    margin-left: 4rem;
 }
 
 section {
@@ -395,47 +393,47 @@ section {
 }
 
 .hero-text h5 {
-    font-size: 40px;
+    font-size: 4rem;
     font-weight: 400;
     color: #555555;
-    margin-bottom: 40px;
+    margin-bottom: 4rem;
 }
 
 .hero-text h1 {
     font-family: 'PT Serif', serif;
-    font-size: 90px;
+    font-size: 3rem;
     line-height: 1;
     color: #555555;
-    margin: 0 0 45px;
-    margin-right: 290px;
+    margin: 0 0 4.5rem;
+   
 
 }
 
 .hero-text h4 {
-    font-size: 42px;
+    font-size: 4.2rem;
     font-weight: 400;
     color: #555555;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
 }
 
 
 .hero-img img {
-    width: 540px;
+    width: 54rem;
     height: auto;
-    margin-top: 40px;
-    margin-left: -110px;
+    margin-top: 4rem;
+    margin-left: -11rem;
 }
 
 .hero-text a {
     display: inline-block;
     color: black;
     background: rgb(255, 223, 79);
-    border: 1px solid transparent;
-    padding: 12px 30px;
+    border: 0.1rem solid transparent;
+    padding: 1.2rem 3rem;
     line-height: 1.4;
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: 500;
-    border-radius: 30px;
+    border-radius: 3rem;
     text-transform: uppercase;
     transition: all .55s ease;
 }
@@ -445,13 +443,13 @@ section {
     color: black;
     cursor: pointer;
     transition: 0.4s;
-    transform: translateX(8px);
+    transform: translateX(0.8rem);
 }
 
 .hero-text a.ctaa {
     background: transparent;
-    border: 1px solid #39b54a;
-    margin-left: 20px;
+    border: 0.1rem solid #39b54a;
+    margin-left: 2rem;
 }
 
 .hero-text .ctaa {
@@ -460,7 +458,7 @@ section {
 
 .hero-text a.ctaa i {
     vertical-align: middle;
-    margin-right: 5px;
+    margin-right: 0.5rem;
 }
 
 
@@ -473,15 +471,15 @@ section {
 
 .icons i {
     display: block;
-    margin: 26px;
-    font-size: 28px;
+    margin: 2.6rem;
+    font-size: 2.8rem;
     color: black;
     transition: all .50s ease;
 }
 
 .icons i:hover {
     color: #434343;
-    transform: translateY(-5px);
+    transform: translateY(-0.5rem);
 }
 
 .scroll-down {
@@ -500,17 +498,17 @@ section {
 
 .scroll-down i {
     display: block;
-    padding: 12px;
-    font-size: 25px;
-    font-size: 25px;
+    padding: 1.2rem;
+    font-size: 2.5rem;
+    font-size: 2.5rem;
     background-color: #ffdf4f;
     color: #000;
-    margin-right: 1450px;
+    margin-right: 145rem;
 
 }
 
 .scroll-down i:hover {
-    transform: translateY(-6px);
+    transform: translateY(-0.6rem);
 }
 
 .row {
@@ -522,30 +520,29 @@ section {
 
 .container {
     display: inline-block;
-    margin-top: 100px;
+    margin-top: 10rem;
     width: 42.1rem;
     padding: 1rem;
 }
 
 .container p {
-    font-size: 16px;
+    font-size: 1.6rem;
 }
 
 .heading {
     position: relative;
     background: lightgray;
-    position: fixed;
 }
 
 .heading-img {
-    width: 500px;
+    width: 50rem;
     height: auto;
 
-    margin-left: 180px;
+    margin-left: 18rem;
 }
 
 .heading-text1 {
-    font-size: 25px;
+    font-size: 2.5rem;
     text-transform: uppercase;
 }
 
@@ -556,7 +553,7 @@ section {
 }
 
 .heading-text2 {
-    font-size: 13.5px;
+    font-size: 1.35rem;
     display: inline-block;
 }
 
@@ -565,27 +562,27 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 330px;
+    margin-right: 33rem;
     flex-wrap: wrap;
 }
 
 .button {
-    width: 140px;
-    height: 50px;
+    width: 14rem;
+    height: 5rem;
     font-family: 'Roboto', sans-serif;
-    font-size: 11px;
+    font-size: 1.1rem;
     text-transform: uppercase;
-    letter-spacing: 2.5px;
+    letter-spacing: 0.25rem;
     font-weight: 500;
     color: black;
     background-color: #ffdf4f;
     border: none;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0rem 0.8rem 1.5rem rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
-    margin-left: 300px;
-    margin-top: 20px;
+    margin-left: 30rem;
+    margin-top: 2rem;
 
 }
 
@@ -602,7 +599,7 @@ section {
     gap: 5rem;
     align-items: center;
     height: auto;
-    margin: 18px;
+    margin: 1.8rem;
 
 }
 
@@ -628,7 +625,7 @@ p {
 }
 
 .part {
-    width: 25rem;
+    width: 27rem;
     height: 30rem;
     transition: 0.2s transform;
     flex-grow: 1;
@@ -647,16 +644,16 @@ p {
 }
 
 .part--section h2 {
-    font-size: 8.6px;
+    font-size: 0.86rem;
 }
 
 .part--section h1 {
-    font-size: 12px;
+    font-size: 1.2rem;
 }
 
 .part--p {
     color: #39b54a;
-    font-size: 19px;
+    font-size: 1.9rem;
 }
 
 
@@ -674,8 +671,8 @@ p {
 
 .title {
     display: block;
-    margin-top: -15px;
-    font-size: 15px;
+    margin-top: -1.5rem;
+    font-size: 1.5rem;
     color: green;
     text-transform: capitalize;
 }
@@ -686,8 +683,8 @@ p {
 
 .social li i {
     display: block;
-    padding: 10px;
-    font-size: 17px;
+    padding: 1rem;
+    font-size: 1.7rem;
     color: white;
     transition: all 0.3s ease 0s;
     text-decoration: none;
@@ -710,13 +707,13 @@ a {
 }
 
 .btn-hover {
-    width: 200px;
-    font-size: 16px;
+    width: 20rem;
+    font-size: 1.6rem;
     font-weight: 600;
     color: #fff;
     cursor: pointer;
-    margin: 20px;
-    height: 55px;
+    margin: 2rem;
+    height: 5.5rem;
     text-align: center;
     border: none;
     background-size: 300% 100%;
@@ -814,9 +811,11 @@ a {
 
 .section-a {
     margin: 2rem 0;
-    margin-top: -100px;
-
+    margin-left: -4rem;
+    display: flex;
     background: #ECECEC;
+    justify-content: center;
+    align-items: center;
 }
 
 .section-a a:hover {
@@ -827,7 +826,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 300px;
+    margin-left: 30rem;
 }
 
 .section-a h1 {
@@ -840,29 +839,29 @@ a {
 }
 
 .section-a img {
-    margin-left: 200px;
+    margin-left: 20rem;
 }
 
 .about button {
     background: #ffdf4f;
     color: black;
-    border: 2px solid transparent;
+    border: 0.2rem solid transparent;
     text-decoration: none;
-    padding: 10px 30px;
-    font-size: 17px;
+    padding: 1rem 3rem;
+    font-size: 1.7rem;
     font-weight: bold;
-    width: 140px;
-    height: 45px;
+    width: 14rem;
+    height: 4.5rem;
     font-family: 'Roboto', sans-serif;
-    font-size: 11px;
+    font-size: 1.1rem;
     text-transform: uppercase;
-    letter-spacing: 2.5px;
+    letter-spacing: 0.25rem;
     font-weight: 500;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0rem 0.8rem 1.5rem rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
-    margin-right: 100px;
+    margin-right: 10rem;
 }
 
 .about button:hover {
@@ -883,7 +882,7 @@ a {
 .section--third {
     background: white;
     display: flex;
-    padding: 4remS;
+    padding: 4rem;
     align-items: center;
 }
 
@@ -911,7 +910,7 @@ a {
     gap: 2rem;
     width: 80%;
     flex-wrap: wrap;
-    margin-top: 200px;
+    margin-top: 20rem;
 }
 
 .review {
@@ -946,7 +945,7 @@ a {
     align-items: center;
     border-radius: 50%;
     text-align: center;
-    margin-left: 20px;
+    margin-left: 2rem;
 }
 
 .quote {
@@ -970,22 +969,22 @@ a {
     font-style: italic;
     padding-bottom: 2rem;
     border-bottom: 0.5 rem solid rgba(0, 0, 0, 0.2);
-    margin-top: 10px;
+    margin-top: 1rem;
 }
 
 footer {
-    max-height: 610px;
+    max-height: 61rem;
     width: 100%;
     position: absolute;
     /* bottom: 0;weghalen als niet werkt*/
     background: #313139;
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #fff;
-    padding: 100px 0 30px;
-    border-top-left-radius: 125px;
-    font-size: 13px;
+    padding: 10rem 0 3rem;
+    border-top-left-radius: 12.5rem;
+    font-size: 1.3rem;
     height: 85vh;
-    line-height: 20px;
+    line-height: 2rem;
 }
 
 footer p,h1,h4, .email-id{
@@ -1003,7 +1002,7 @@ footer p,h1,h4, .email-id{
 
 .col {
     flex-basis: 25%;
-    padding: 10px;
+    padding: 1rem;
 }
 
 .col:nth-child(2),
@@ -1012,14 +1011,14 @@ footer p,h1,h4, .email-id{
 }
 
 .logo {
-    width: 250px;
-    margin-bottom: 30px;
-    margin-left: -53px;
+    width: 25rem;
+    margin-bottom: 3rem;
+    margin-left: -5.3rem;
 }
 
 .col h3 {
     width: fit-content;
-    margin-bottom: 40px;
+    margin-bottom: 4rem;
     position: relative;
     display: flex;
     align-items: center;
@@ -1029,30 +1028,30 @@ footer p,h1,h4, .email-id{
 
 .place {
     width: fit-content;
-    margin-bottom: 40px;
+    margin-bottom: 4rem;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-left: 20px;
+    margin-left: 2rem;
 }
 
 .col p {
-    margin-right: 120px;
+    margin-right: 12rem;
 }
 
 
 
 .email-id {
     width: fit-content;
-    border-bottom: 1px solid #ccc;
-    margin: 20px 0;
+    border-bottom: 0.1rem solid #ccc;
+    margin: 2rem 0;
 }
 
 ul li {
     list-style: none;
-    margin-bottom: 12px;
+    margin-bottom: 1.2rem;
 }
 
 ul li a {
@@ -1062,18 +1061,18 @@ ul li a {
 
 
 form {
-    padding-bottom: 15px;
+    padding-bottom: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #ccc;
-    margin-bottom: 50px;
+    border-bottom: 0.1rem solid #ccc;
+    margin-bottom: 5rem;
     gap: 1rem;
 }
 
 form .fas {
-    font-size: 18px;
-    margin-right: 10px;
+    font-size: 1.8rem;
+    margin-right: 1rem;
 }
 
 form input {
@@ -1093,20 +1092,20 @@ form button {
 }
 
 form button .fas {
-    font-size: 16px;
+    font-size: 1.6rem;
     color: #ccc;
 }
 
 .social-icons .fab {
-    width: 40px;
-    height: 40px;
+    width: 4rem;
+    height: 4rem;
     border-radius: 50%;
     text-align: center;
-    line-height: 40px;
-    font-size: 20px;
+    line-height: 4rem;
+    font-size: 2rem;
     color: #000;
     background: #fff;
-    margin-right: 15px;
+    margin-right: 1.5rem;
     cursor: pointer;
 }
 
@@ -1121,52 +1120,52 @@ form button .fas {
 hr {
     width: 100%;
     border: 0;
-    border-bottom: 1px solid #ccc;
-    margin: 20px auto;
+    border-bottom: 0.1rem solid #ccc;
+    margin: 2rem auto;
 }
 
 .copyright {
     text-align: center;
     background: #26262e;
-    min-height: 135px;
+    min-height: 13.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: -90px;
-    margin-top: -20px;
+    margin-bottom: -9rem;
+    margin-top: -2rem;
 
 }
 
 .underline {
     width: 100%;
-    height: 5px;
+    height: 0.5rem;
     background: #39b54a;
-    border-radius: 3px;
+    border-radius: 0.3rem;
     position: absolute;
-    top: 25px;
+    top: 2.5rem;
     left: 0;
     overflow: hidden;
 }
 
 footer a:hover {
-    border-bottom: 2px solid #39b54a;
+    border-bottom: 0.2rem solid #39b54a;
 }
 
 .underline span {
-    width: 15px;
+    width: 1.5rem;
     height: 100%;
     background: #ffdf4f;
-    border-radius: 3px;
+    border-radius: 0.3rem;
     position: absolute;
     top: 0;
-    left: 10px;
+    left: 1rem;
     animation: moving 2s linear infinite;
 }
 
 
 @keyframes moving {
     0% {
-        left: -20px
+        left: -2rem
     }
 
     100% {
@@ -1179,7 +1178,7 @@ button i {
     color: #ccc;
 }
 
-@media (max-width:700px) {
+@media (max-width:70rem) {
     footer {
         bottom: unset;
     }
@@ -1196,7 +1195,7 @@ button i {
 }
 
 ::-webkit-scrollbar {
-    width: 15px;
+    width: 1.5rem;
 }
 
 ::-webkit-scrollbar-track {
@@ -1209,29 +1208,29 @@ button i {
 
 }
 
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 118rem) {
     .about {
         width: 100%;
         height: auto;
-        padding: 70px 0;
+        padding: 7rem 0;
     }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 65rem) {
     .about .content img {
-        margin-bottom: 35px;
+        margin-bottom: 3.5rem;
     }
 
     .text h1 {
-        font-size: 60px;
-        margin-bottom: 25px;
+        font-size: 6rem;
+        margin-bottom: 2.5rem;
     }
 }
 
 @keyframes fadein {
     from {
         opacity: 0;
-        filter: blur(10px);
+        filter: blur(1rem);
     }
 
     to {
@@ -1250,9 +1249,9 @@ button i {
     }
 }
 
-@media (max-width: 1535px) {
+@media (max-width: 153.5rem) {
     header {
-        padding: 15px 3%;
+        padding: 1.5rem 3%;
         transition: .2s;
     }
 
@@ -1267,41 +1266,41 @@ button i {
     }
 }
 
-@media (max-width: 1460px) {
+@media (max-width: 146rem) {
     section {
         padding: 0 12%;
         transition: .2s;
     }
 }
 
-@media (max-width: 1340px) {
+@media (max-width: 134rem) {
     .hero-img img {
         width: 100%;
         height: auto;
     }
 
     .hero-text h1 {
-        font-size: 75px;
-        margin: 0 0 30px;
+        font-size: 7.5rem;
+        margin: 0 0 3rem;
     }
 
     .hero-text h5 {
-        margin-bottom: 25px;
+        margin-bottom: 2.5rem;
     }
 }
 
-@media (max-width: 1195px) {
+@media (max-width: 119.5rem) {
     section {
         padding: 0 3%;
         transition: .2s;
     }
 
     .hero-text {
-        padding-top: 115px;
+        padding-top: 11.5rem;
     }
 
     .hero-img img {
-        width: 560px;
+        width: 56rem;
         height: auto;
     }
 
@@ -1320,7 +1319,7 @@ button i {
     }
 }
 
-@media (max-width: 990px) {
+@media (max-width: 99rem) {
     #menu-icon {
         display: block;
     }
@@ -1329,19 +1328,19 @@ button i {
         position: absolute;
         top: 100%;
         right: -100%;
-        width: 300px;
+        width: 30rem;
         height: 40vh;
         display: flex;
         align-items: center;
         flex-direction: column;
-        padding: 50px 20px;
+        padding: 5rem 2rem;
         transition: all .55s ease;
     }
 
     .navlist a {
         margin-left: 0;
         display: block;
-        margin: 7px 0;
+        margin: 0.7rem 0;
     }
 
     .navlist.open {
@@ -1349,7 +1348,7 @@ button i {
     }
 }
 
-@media (max-width: 680px) {
+@media (max-width: 68rem) {
     .hero-img img {
         width: 100%;
         height: auto;
@@ -1357,7 +1356,7 @@ button i {
 }
 
 ::-webkit-scrollbar {
-    width: 15px;
+    width: 1.5rem;
 }
 
 ::-webkit-scrollbar-track {
