--- a/about-us.css
+++ b/about-us.css
@@ -33,22 +33,22 @@ body {
 
 .cart i {
     display: block;
-    padding: 12px;
-    font-size: 55px;
+    padding: 1.2rem;
+    font-size: 5.5rem;
     color: #ffdf4f;
-    border-radius: 30px;
+    border-radius: 3rem;
 
 }
 
 .cart i:hover {
-    transform: translateY(-6px);
+    transform: translateY(-0.6rem);
 }
 
 .wrapper {
     width: 100%;
     max-width: 31.25rem;
     margin: 6rem auto;
-    margin-right: 700px;
+    margin-right: 70rem;
 
 }
 
@@ -57,7 +57,7 @@ body {
     font-size: 1.1rem;
     font-weight: 400;
     text-transform: uppercase;
-    letter-spacing: +1.3px;
+    letter-spacing: +0.13rem;
     margin-bottom: 0.5rem;
 }
 
@@ -77,7 +77,7 @@ body {
     color: #39b54a;
     opacity: 1;
     /* Firefox */
-    font-size: 13.5px;
+    font-size: 1.35rem;
 }
 
 :-ms-input-placeholder {
@@ -155,16 +155,16 @@ header {
 
 .navlist a {
     color: white;
-    margin-left: 60px;
-    font-size: 19px;
+    margin-left: 6rem;
+    font-size: 1.9rem;
     font-weight: 600;
-    border-bottom: 2px solid transparent;
+    border-bottom: 0.2rem solid transparent;
     transition: all .55s ease;
 
 }
 
 .navlist a:hover {
-    border-bottom: 2px solid #39b54a;
+    border-bottom: 0.2rem solid #39b54a;
     color: #ffdf4f;
 }
 
@@ -174,7 +174,7 @@ header {
     display: flex;
     top: 0%;
     right: 50%;
-    margin-top: 31px;
+    margin-top: 3.1rem;
 }
 
 
@@ -198,13 +198,13 @@ nav {}
 /* Dropdown Menu a (navbar) Bg Color */
 .nav-menu .dropdown a:after {
     background-color: white !important;
-    border-bottom: 2px solid #B7521B;
+    border-bottom: 0.2rem solid #B7521B;
 }
 
 /* Dropdown Menu Open a (navbar) Bg Color */
 .down-color {
     background-color: white !important;
-    border-bottom: 2px solid #ecc725;
+    border-bottom: 0.2rem solid #ecc725;
 }
 
 /* Dropdown Menu Inner Items Default Bg Color */
@@ -227,13 +227,13 @@ nav {}
 
 nav {
     position: absolute;
-    height: 82px;
+    height: 8.2rem;
     width: 100vw;
 }
 
 .nav-menu {
     display: flex;
-    margin-top: 0px;
+    margin-top: 0rem;
     padding: 0;
 }
 
@@ -249,7 +249,7 @@ nav {
     text-align: center;
     z-index: 100;
     background-color: transparent;
-    line-height: 61px;
+    line-height: 6.1rem;
     overflow: hidden;
 }
 
@@ -263,7 +263,7 @@ nav {
     color: black;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 1.5rem;
 }
 
 
@@ -281,7 +281,7 @@ nav {
     content: "";
     position: absolute;
     display: inline-block;
-    height: 60px;
+    height: 6rem;
 }
 
 .nav-menu .norm a:after {
@@ -316,12 +316,12 @@ nav {
 .dropdown-menu {
     width: 100%;
     position: relative;
-    top: -500px;
+    top: -50rem;
     text-align: center;
     z-index: 1049;
     display: block;
     list-style: none;
-    font-size: 12px;
+    font-size: 1.2rem;
     border: none;
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
@@ -330,12 +330,12 @@ nav {
 
 .dropdown-menu>li>a {
     display: block;
-    padding-top: 5.6px;
-    padding-bottom: 5.6px;
+    padding-top: 0.56rem;
+    padding-bottom: 0.56rem;
     clear: both;
     font-family: gotham light !important;
-    font-size: 15px !important;
-    line-height: 35px;
+    font-size: 1.5rem !important;
+    line-height: 3.5rem;
     color: #777 !important;
     white-space: nowrap;
 }
@@ -362,19 +362,19 @@ nav {
 #drop {
     width: 100%;
     text-align: center;
-    margin-bottom: 18.5px;
+    margin-bottom: 1.85rem;
 }
 
 .down {
     position: absolute;
     display: block;
-    top: 0px;
+    top: 0rem;
 }
 
 
 #menu-icon {
     color: black;
-    font-size: 35px;
+    font-size: 3.5rem;
     z-index: 10001;
     cursor: pointer;
     display: none;
@@ -390,18 +390,18 @@ nav {
 
 .about .content img {
     height: auto;
-    width: 600px;
+    width: 60rem;
     max-width: 100%;
 }
 
 .text {
-    width: 550px;
+    width: 55rem;
     max-width: 100%;
-    padding: 0 10px;
+    padding: 0 1rem;
 }
 
 .content {
-    width: 1280px;
+    width: 128rem;
     max-width: 95%;
     margin: 0 auto;
     display: flex;
@@ -412,45 +412,45 @@ nav {
 
 .text h1 {
     color: #ffcc74;
-    font-size: 85px;
-    margin-bottom: 20px;
+    font-size: 8.5rem;
+    margin-bottom: 2rem;
     text-transform: capitalize;
 }
 
 .text h5 {
     color: black;
-    font-size: 25px;
-    margin-bottom: 25px;
+    font-size: 2.5rem;
+    margin-bottom: 2.5rem;
     text-transform: capitalize;
-    letter-spacing: 2px;
+    letter-spacing: 0.2rem;
 }
 
 .text p {
     color: black;
-    font-size: 18px;
-    line-height: 28px;
-    letter-spacing: 1px;
-    margin-bottom: 45px;
+    font-size: 1.8rem;
+    line-height: 2.8rem;
+    letter-spacing: 0.1rem;
+    margin-bottom: 4.5rem;
 }
 
 .about button {
     background: #ffcc74;
     color: black;
-    border: 2px solid transparent;
+    border: 0.2rem solid transparent;
     text-decoration: none;
-    padding: 10px 30px;
-    border-radius: 30px;
-    font-size: 17px;
+    padding: 1rem 3rem;
+    border-radius: 3rem;
+    font-size: 1.7rem;
     font-weight: bold;
-    width: 140px;
-    height: 45px;
+    width: 14rem;
+    height: 4.5rem;
     font-family: 'Roboto', sans-serif;
-    font-size: 11px;
+    font-size: 1.1rem;
     text-transform: uppercase;
-    letter-spacing: 2.5px;
+    letter-spacing: 0.25rem;
     font-weight: 500;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 4.5rem;
+    box-shadow: 0rem 0.8rem 1.5rem rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
@@ -459,7 +459,7 @@ nav {
 .about button:hover {
     transform: scale(1.2);
     background-color: transparent;
-    border: 2px solid #ffcc74;
+    border: 0.2rem solid #ffcc74;
     color: #ffcc74;
     transition: .4s;
     cursor: pointer;
@@ -476,10 +476,10 @@ footer {
     background: linear-gradient(to right, #232526, #414345);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #fff;
-    padding: 100px 0 30px;
-    border-top-left-radius: 125px;
-    font-size: 13px;
-    line-height: 20px;
+    padding: 10rem 0 3rem;
+    border-top-left-radius: 12.5rem;
+    font-size: 1.3rem;
+    line-height: 2rem;
 }
 
 .row {
@@ -493,7 +493,7 @@ footer {
 
 .col {
     flex-basis: 25%;
-    padding: 10px;
+    padding: 1rem;
 }
 
 .col:nth-child(2),
@@ -502,26 +502,26 @@ footer {
 }
 
 .logo {
-    width: 80px;
-    margin-bottom: 30px;
-    margin-left: -23px;
+    width: 8rem;
+    margin-bottom: 3rem;
+    margin-left: -2.3rem;
 }
 
 .col h3 {
     width: fit-content;
-    margin-bottom: 40px;
+    margin-bottom: 4rem;
     position: relative;
 }
 
 .email-id {
     width: fit-content;
-    border-bottom: 1px solid #ccc;
-    margin: 20px 0;
+    border-bottom: 0.1rem solid #ccc;
+    margin: 2rem 0;
 }
 
 ul li {
     list-style: none;
-    margin-bottom: 12px;
+    margin-bottom: 1.2rem;
 }
 
 ul li a {
@@ -531,18 +531,18 @@ ul li a {
 
 
 form {
-    padding-bottom: 15px;
+    padding-bottom: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #ccc;
-    margin-bottom: 50px;
+    border-bottom: 0.1rem solid #ccc;
+    margin-bottom: 5rem;
     gap: 1rem;
 }
 
 form .fas {
-    font-size: 18px;
-    margin-right: 10px;
+    font-size: 1.8rem;
+    margin-right: 1rem;
 }
 
 form input {
@@ -562,20 +562,20 @@ form button {
 }
 
 form button .fas {
-    font-size: 16px;
+    font-size: 1.6rem;
     color: #ccc;
 }
 
 .social-icons .fab {
-    width: 40px;
-    height: 40px;
+    width: 4rem;
+    height: 4rem;
     border-radius: 50%;
     text-align: center;
-    line-height: 40px;
-    font-size: 20px;
+    line-height: 4re,;
+    font-size: 2rem;
     color: #000;
     background: #fff;
-    margin-right: 15px;
+    margin-right: 1.5rem;
     cursor: pointer;
 }
 
@@ -590,8 +590,8 @@ form button .fas {
 hr {
     width: 90%;
     border: 0;
-    border-bottom: 1px solid #ccc;
-    margin: 20px auto;
+    border-bottom: 0.1rem solid #ccc;
+    margin: 2rem auto;
 }
 
 .copyright {
@@ -600,34 +600,34 @@ hr {
 
 .underline {
     width: 100%;
-    height: 5px;
+    height: 0.5rem;
     background: #39b54a;
-    border-radius: 3px;
+    border-radius: 0.3rem;
     position: absolute;
-    top: 25px;
+    top: 2.5rem;
     left: 0;
     overflow: hidden;
 }
 
 a:hover {
-    border-bottom: 2px solid #39b54a;
+    border-bottom: 0.2rem solid #39b54a;
 }
 
 .underline span {
-    width: 15px;
+    width: 1.5rem;
     height: 100%;
     background: #ffdf4f;
-    border-radius: 3px;
+    border-radius: 0.3rem;
     position: absolute;
     top: 0;
-    left: 10px;
+    left: 1rem;
     animation: moving 2s linear infinite;
 }
 
 
 @keyframes moving {
     0% {
-        left: -20px
+        left: -2rem
     }
 
     100% {
@@ -640,7 +640,7 @@ button i {
     color: #ccc;
 }
 
-@media (max-width:700px) {
+@media (max-width:70rem) {
     footer {
         bottom: unset;
     }
@@ -656,21 +656,21 @@ button i {
     }
 }
 
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 118rem) {
     .about {
         width: 100%;
         height: auto;
-        padding: 70px 0;
+        padding: 7rem 0;
     }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 65rem) {
     .about .content img {
-        margin-bottom: 35px;
+        margin-bottom: 3.5rem;
     }
 
     .text h1 {
-        font-size: 60px;
-        margin-bottom: 25px;
+        font-size: 6rem;
+        margin-bottom: 2.5rem;
     }
 }
