--- a/test.css
+++ b/test.css
@@ -509,7 +509,7 @@ nav {
   
   .cart-btn {
     display: inline-block;
-    background-color: #fd58f7;
+    background-color: #ffdf4f;
     border-radius: 0.6rem;
     font-size: 1.6rem;
     color: #FFFFFF;
@@ -518,7 +518,7 @@ nav {
     transition: all 0.5s;
   }
   .cart-btn:hover {
-    background-color: #fd58f7;
+    background-color: #ecc725;
   }
   
   /* Footer Styles */
